# pyquaticus

./: .gitignore  AUTHORS  LICENSE  README.md  SPDX.spdx  pyproject.toml  setup-conda-env.sh  test.py
docker/: Dockerfile  requirements.txt  run_docker.sh
docker/gym-aquaticus/: README.md  setup.py
docker/gym-aquaticus/gym_aquaticus/: __init__.py  utils.py
docker/gym-aquaticus/gym_aquaticus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docker/gym-aquaticus/gym_aquaticus/envs/: __init__.py  aquaticus_agent.py  aquaticus_team_env.py  aquaticus_team_env_wrappers.py  config.py  pyquaticus_bridge.py  pyquaticus_team_env_bridge.py
docker/missions_pyquaticus/: aquaticus_params.txt  blue.sh  demo_1v1.sh  demo_2v2.sh  launch_blue.sh  launch_boat.sh  launch_demo.sh  launch_red.sh  plug_origin_warp.moos  plug_pHostInfo.moos  plug_pShare.moos  plug_uFldMessageHandler.moos  plug_uFldNodeBroker.moos  plug_uLoadWatch.moos  pyquaticus_bridge_blue.py  pyquaticus_bridge_red.py  pyquaticus_bridge_single_boat.py  pyquaticus_bridge_single_sim.py  pyquaticus_bridge_test.py  rand_action_env_test.py  xbox_test.py
docker/missions_pyquaticus/rllib_policies/attacker-1-policy/: policy_state.pkl
docker/missions_pyquaticus/rllib_policies/defender-0-policy/: policy_state.pkl
docker/missions_pyquaticus/shoreside/: Map_18_77141-77144_97943-97947.info  launch_shoreside.sh  meta_shoreside.moos  popolopen.tif  sounds
docker/missions_pyquaticus/shoreside/attic/: plug_pLogger.moos  plug_uFZEUntag.moos  plug_uFldFlagManager.moos  plug_uFldTagManager.moos  plug_uProcessWatch.moos
docker/missions_pyquaticus/surveyor/: launch_surveyor.sh  meta_surveyor.bhv  meta_surveyor.moos  plug_pHelmIvP.moos  plug_pMarinePID.moos  plug_pZoneTrackOpponents.moos  plug_uSimMarine.moos
docker/moos-ivp-rlagent/: .gitignore  CMakeLists.txt  build.sh
docker/moos-ivp-rlagent/missions/20230712_aug_2022_new_platform_valhalla/: README-MISSION-AUTONOMY  clean.sh  config.py  launch_demo.sh  plug_iSay.moos  plug_pDeadManPost.moos  plug_pNodeReporter.moos  run_agent.py
docker/moos-ivp-rlagent/src/lib_behaviors/: CMakeLists.txt
docker/moos-ivp-rlagent/src/pRLMonitor/: CMakeLists.txt  RLMonitor.cpp  main.cpp  pRLMonitor.moos
docker/pyquaticus_submission/: demo_launch3.sh  game_loop.py  launch_all.sh  launch_pyquaticus.sh  run_submission.sh  setup.sh  solution.py
docker/pyquaticus_submission/logs/C000_LOG_URSULA_BLUE_ONE_26_3_2025_____08_42_21/: C000_LOG_URSULA_BLUE_ONE_26_3_2025_____08_42_21._moos  C000_LOG_URSULA_BLUE_ONE_26_3_2025_____08_42_21.alog  C000_LOG_URSULA_BLUE_ONE_26_3_2025_____08_42_21.ylog
docker/scripts/: killAllMOOS.sh
moos/: .gitignore
moos/missions/: arrowkeys_moos_test.py
moos/missions/charles-2025/: README  arrowkeys_moos_test.py  clean.sh  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_common.bhv  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plugs.moos
moos/missions/wp-2025/: jerop.sh  launch_demo.sh  launch_demo.sh.save  launch_demo2.sh  launch_demo3.sh  launch_sim_demo.sh  plug_origin_warp.moos  plug_pHostInfo.moos  plug_pRoleChooser.moos  plug_pShare.moos  region_info.txt.save
moos/missions/wp-2025/scenario/: game_loop.py  (+2 more)
moos/moos-ivp-rlagent/: clean.sh
moos/moos-ivp-rlagent/src/: CMakeLists.txt
moos/moos-ivp-rlagent/src/lib_behaviors/: BHV_RLAgent.cpp  BHV_RLAgent.h
moos/moos-ivp-rlagent/src/pRLMonitor/: RLMonitor.h  RLMonitor_Info.cpp  RLMonitor_Info.h
moos_missions/charles-2025/: clean.sh  genop.sh  plugs.moos
pyquaticus/: __init__.py  config.py  mctf26_config.py  pyquaticus_v0.py  structs.py
pyquaticus/base_policies/: README.MD  base.py  base_attack.py  base_combined.py  base_combined_continuous.py  base_defend.py  base_defend_continuous.py  base_policies.py  base_policy.py  base_policy_wrappers.py  env_waypoint_policy.py  intersect_utils.py  key_agent.py  rrt_star.py  test_big_rrt.py  test_rrt.py  utils.py  waypoint_policy.py  wp_follower.py  wp_follower_continuous.py
pyquaticus/base_policies/continuous/: base_attack_continuous.py  base_combined_continuous.py  base_defend_continuous.py
pyquaticus/base_policies/deprecated/: base.py  base_attack.py  base_combined.py  base_defend.py
pyquaticus/base_policies/discrete/: base_policies.py
pyquaticus/base_policies/rrt/: intersect_test.py  rrt_star.py  speed_test.py  test_big_rrt.py  test_rrt.py  utils.py
pyquaticus/dynamics/: dynamics.py  dynamics_registry.py  dynamics_utils.py
pyquaticus/envs/: competition_pyquaticus.py  pyquaticus.py  pyquaticus_moos_bridge.py  rllib_pettingzoo_wrapper.py
pyquaticus/envs/dynamics/: double_integrator.py  drone.py  fixed_wing.py  heron.py  large_usv.py  single_integrator.py
pyquaticus/moos/: config.py  get_field.sh  pyquaticus_moos_bridge.py  pyquaticus_moos_bridge_ext.py
pyquaticus/moos_bridge/: config.py  pyquaticus_moos_bridge.py  pyquaticus_moos_bridge_ext.py
pyquaticus/qualisys/: pyquaticus_qualisys_bridge.py  qualisys_comms.py
pyquaticus/utils/: dummy_policies.py  obs_utils.py  pid.py  reward_machine.py  rewards.py  utils.py
rl_test/: .train_3v3.py.swp  alpha_train_2v2.py  competition_deploy.py  competition_export_policy.py  competition_train_example.py  deploy.py  deploy_2v2.py  deploy_3v3.py  export_policy_2v2.py  high_bay_train.py  nohup.out  solution.py  train.py  train_2v2.py  train_3v3.py  train_against_easy.py
rl_test/competition_info/: gen_config.py  readme.txt  solution.py
test/: arrowkeys_mctf2026.py  arrowkeys_moos_test.py  arrowkeys_test.py  base_policy_arrowkeys_test.py  base_policy_match.py  base_policy_random_state_test.py  base_policy_red_arrowkeys_test.py  base_policy_test.py  continuous_action_test.py  continuous_base_policy_test.py  continuous_test.py  dynamics_test.py  env_test.py  gps_env_test.py  heuristic_gps_test.py  heuristic_test.py  import_pygame.py  jit_model.pt  lhb_scenario_test.py  load_from_state_dict_test.py  pyquaticus_moos_bridge_rand_test.py  pyquaticus_moos_bridge_test.py  rand_env_test.py  save_video.py  save_video_and_screenshot.py  shapely_test.py  topo_raster.py  vec_ray.py
(+80 files in other folders)
